fixed some overflow issues in the header

--- a/less/creative.less
+++ b/less/creative.less
@@ -259,8 +259,10 @@ header {
     .background-cover;
     background-position: center;
     background-image: url('../img/vids/applefalls.png');
+    z-index: -2;
     text-align: center;
     color: white;
+    overflow: hidden;
     .header-content {
         position: relative;
         max-height: 100%;
@@ -335,6 +337,7 @@ video#af-vid {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
+    z-index: -1;
 }
 
 // Sections
